# ProxyBridge

./: .gitignore  CMakeLists.txt  README.md
config/: adscore_bypass_config.json  proxy_config.json  socks5_stealth_config.json  ssl_config_example.json  ssl_sni_config.json  stealth_config.json
docs/: ADSCORE_BYPASS_GUIDE.md  PROXY_TRANSPARENCY_DIAGNOSIS.md  command_examples.md  socks5_client_guide.md  softether_socks5_config.md  stealth_cloak.md  vpn_protection_analysis.md  windows_service_guide.md
example/: CMakeLists.txt
example/music_player/: index.html
example/nested_proxy/: CMakeLists.txt  nested_proxy.cpp
example/tests/: anti_detection_config.md  browser_mimicry.hpp  connection_health.hpp  socks5_optimization.hpp
examples/: adscore_bypass_test.cpp  http_connect_proxy.cpp  minimal_transparent_proxy.cpp  smart_adscore_bypass.cpp  stealth_proxy_config.cpp  traffic_fingerprint_example.cpp  transparent_proxy_test.cpp
include/: anti_detection_config.hpp  ibridge.h  rapidjson.h  softether_optimization.hpp  stealth_config.hpp  windows_service.hpp  xsiumio.hpp
proxy/: CMakeLists.txt
proxy/include/proxy/: logging.hpp  proxy_server.hpp  proxy_server_api.hpp  traffic_fingerprint.hpp
scripts/: setup_adscore_bypass.sh  start_socks5_stealth.bat  start_stealth.bat  start_stealth.sh  test_adscore_bypass.sh
server/: CMakeLists.txt
server/ProxyBridge/: CMakeLists.txt  bridge.cc  bridge.hpp  main.cc  proxy_server.aps  proxy_server.rc  util.h
server/libbridge/: CMakeLists.txt  bridge.cc  bridge.hpp  libbridge.rc  main.cc  util.cc  util.h
server/proxy_server_org/: CMakeLists.txt  main.cpp  main.hpp
src/: main_service.cpp  windows_service.cpp
tests/: CMakeLists.txt
tests/test_libbridge/: CMakeLists.txt  test_libbridge.cc
tools/: fix_3proxy.bat  proxy_installer.bat
